:zap: Update: 유저 정보 검색 api 업데이트